@@ -2,8 +2,8 @@ package com.intuit.benten.jira.http;
 
 import com.intuit.benten.jira.model.Issue;
 import com.intuit.benten.jira.model.agile.Board;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 
@@ -24,13 +24,13 @@ public class JiraAgileClientTest extends JiraClientTest{
     public void testSprintsIssues() {
         String sprintid="71231";
         List<Issue> issues = jiraAgileHttpClient.sprintIssues(sprintid);
-        Assert.assertTrue(issues.size()>0);
+        Assertions.assertTrue(issues.size()>0);
     }
 
     @Test
     public void testBoardsByName() {
         String boardName = "Combined_Services_Team_view";
         List<Board> boards = jiraAgileHttpClient.boardsByName(boardName);
-        Assert.assertEquals(boardName,boards.get(0).getName());
+        Assertions.assertEquals(boardName,boards.getFirst().getName());
     }
 }
